--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jayden Reynolds</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -13,7 +12,7 @@
 
     <div class="screen">
         <div id="myDiv" class="window" style="top: 56px; left: 65px;">
-            <div class="windowBar">
+            <div id="myDivHeader" class="windowBar disable-text-select">
                 <span class="close-button"></span>
                 <span class="window-title">Home</span>
             </div>
@@ -21,11 +20,5 @@
     </div>
 
     <script src="scripts.js"></script>
-    <script
-        src="https://code.jquery.com/jquery-3.1.1.min.js"
-        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-        crossorigin="anonymous">
-    </script>
-    <script src="semantic/dist/semantic.min.js"></script>
 </body>
 </html>
